[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Radcliffe <andrewjradcliffe@gmail.com>"]
description = "Advent of Code, 2023; what did you expect?"
repository = "https://github.com/andrewjradcliffe/aoc-2023/"
license = "MIT OR Apache-2.0"

[dependencies]


[profile.release]
lto = true